Wrap quantity integer w/ span
also corrected a typo of the word "quantity"
otherwise this is so rad, thank you @rachy

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <h3>Pet Rock: limestone</h3>
                     <P>$15.00 each</P>
                 </div>
-                <div class="product-quanity">
+                <div class="product-quantity">
                     <button id="quantity-down">-</button>
                     <button id="quantity-up">+</button>
-                    <div class="total-quantity">Quantity: 1</div>
+                    <div>Quantity: <span class="total-quantity">1</span></div>
                     <p class="total-price">Total Price available at checkout</p>
                 </div>
             </div>
