Shopping cart work

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="product-quanity">
                     <button id="quantity-down">-</button>
                     <button id="quantity-up">+</button>
-                    <div class="total-quantity">Quantity: 1</div>
+                    <div class="total-quantity">Quantity: <span class="number">1</span> 1</div>
                     <p class="total-price">Total Price available at checkout</p>
                 </div>
             </div>
